--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,37 @@
 Porting todo file gfx3 -> gfx4.
 
-OCS CALLS NEEDED TO BE PORTED:
+[property] = Not strictly necessary
+
+SOCS TODO:
+	CONTENT
+			add
+			vote
+			download
+			delete
+			get
+			edit
+			list
+			upload download file
+			delete download file
+			upload preview image
+			delete preview image
+	COMMENTS
+			add
+			vote
+			get
+	FAN
+			get
+			isfan
+			add
+			remove
+			
+WIP:
+	PERSON
+			add
+			check (api key needs implementation)
+			get self
+			get
 
 DONE:
-
-CONFIG
+	CONFIG
+			config
